@@ -79,7 +79,6 @@ void FMenuBar::hide()
   FColor bg = wc->term_bg;
   setColor (fg, bg);
   print() << FPoint{1, 1} << FString{getDesktopWidth(), L' '};
-  updateTerminal();
   FWindow::hide();
 }
 
@@ -825,10 +824,7 @@ void FMenuBar::mouseDownOverList (const FMouseEvent* ev)
   }
 
   if ( focus_changed )
-  {
     redraw();
-    updateTerminal();
-  }
 }
 
 //----------------------------------------------------------------------
@@ -920,10 +916,7 @@ void FMenuBar::mouseMoveOverList (const FMouseEvent* ev)
   }
 
   if ( focus_changed )
-  {
     redraw();
-    updateTerminal();
-  }
 }
 
 //----------------------------------------------------------------------
@@ -972,8 +965,6 @@ void FMenuBar::leaveMenuBar()
   if ( getStatusBar() )
     getStatusBar()->drawMessage();
 
-  updateTerminal();
-  flush();
   mouse_down = false;
 }
 
