@@ -411,7 +411,7 @@ void FScrollView::scrollTo (int x, int y)
 
   viewport->has_changes = true;
   copy2area();
-  updateTerminal();
+  processTerminalUpdate();
 }
 
 //----------------------------------------------------------------------
